# minesweeper

./: .pre-commit-config.yaml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app/: app.py
src/: minesweeper.py
tests/: test_minesweeper.py
