[project]
name = "minesweeper"
version = "0.1.0"
description = ""
authors = [
    {name = "Sanjeev Selvaraj",email = "sanjeev.selvaraj@outlook.fr"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

